# icu4x

./: .gitattributes  .gitignore  .gitmodules  .gn  CHANGELOG.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  README.tpl  SECURITY.md  bn.blob  clippy.toml  codecov.yml  debug.txt  keys.txt  lifetime_provider.diff  metadata  rust-toolchain  rust-toolchain.toml  use_pattern.diff
components/calendar/: Cargo.toml  README.md
components/calendar/benches/: astronomy.rs  chinese_based.rs  convert.rs  date.rs  date.rs.orig  datetime.rs  iso.rs  until.rs
components/calendar/data/: Cargo.toml  README.md  config.json
components/calendar/examples/: date_try_from_fields.rs  iso_date_manipulations.rs  iso_date_range_iter.rs  iso_datetime_manipulations.rs
components/calendar/fuzz/: .gitignore  Cargo.toml  crash-57ccc1f91598420f710d19885c40d0803ef7a045  crash-d0ed4800ae78781345d7800ed3799cd959e2ebc3
components/calendar/src/: any_calendar.rs  arithmetic.rs  astronomy.rs  buddhist.rs  calendar.rs  calendar_arithmetic.rs  chinese.rs  chinese_based.rs  chinese_data.rs  chrono.rs  coptic.rs  dangi.rs  date.rs  date.rs.orig  datetime.rs  duration.rs  error.rs  ethiopian.rs  ethiopic.rs  gregorian.rs  hebrew.rs  helpers.rs  indian.rs  islamic.rs  iso.rs  ixdtf.rs  japanese.rs  jiff.rs  julian.rs  lib.rs  options.rs  persian.rs  preferences.rs  provider.rs  rata_die.rs  roc.rs  tagged.rs  time_crate.rs  types.rs  utils.rs  (+2 more)
components/calendar/tests/: arithmetic.rs  arithmetic_exhaustive.rs  date_addition_snapshot.rs  date_arithmetic_snapshot.rs  date_optimized_snapshot.rs  exhaustive.rs  extended_ecma_year.rs  extended_year.rs  hijri_iran.rs  monotonic_year.rs  month.rs  month_code.rs  pingqi.rs  pinqi.rs  reference_year.rs  reingold.rs
components/casemap/: .gitattributes  Cargo.toml  README.md
components/casemap/benches/: casemap.rs
components/casemap/data/: .gitattributes  Cargo.toml  README.md  config.json
components/casemap/examples/: casemapping.rs
components/casemap/src/: casemapper.rs  closer.rs  internals.rs  lib.rs  set.rs  titlecase.rs
components/casemap/tests/: conversions.rs  gen_greek_to_me.rs
components/char_collection/: BUILD.gn  Cargo.toml  README.md
components/char_collection/meta/: char_collection_lib_test.cmx
components/char_collection/src/: char_collection.rs  conversions.rs  lib.rs  macros.rs  operators.rs  uniset.rs
components/cldr-json-data-provider/: Cargo.toml
components/cldr-json-data-provider/src/: cldr_langid.rs  cldr_paths.rs  error.rs  lib.rs  reader.rs  support.rs
components/cldr-json-data-provider/tests/: test_plurals.rs
components/cldr_json_data_provider/: Cargo.toml
components/cldr_json_data_provider/src/: error.rs  lib.rs  support.rs
components/collator/: Cargo.toml  README.md
components/collator/benches/: bench.rs
components/collator/data/: Cargo.toml  README.md  config.json
components/collator/fuzz/: Cargo.toml  README.md
components/collator/src/: comparison.rs  docs.rs  elements.rs  error.rs  lib.rs  options.rs  provider.rs  tests.rs
components/collator/testdata/: README.md  riwords.txt
components/collator/tests/: tests.rs
components/collections/: Cargo.toml  README.md
components/collections/benches/: codepointtrie.rs  iai_cpt.rs  inv_list.rs
components/collections/codepointtrie/: Cargo.toml  README.md
components/collections/codepointtrie_builder/: Cargo.toml  README.md  build.rs  list_to_ucptrie.wasm  ucptrie_wrap.wasm
components/collections/examples/: unicode_bmp_blocks_selector.rs
components/collections/src/: iterator_utils.rs  lib.rs
components/collections/tests/: char16trie.rs  cpt.rs
components/data-exporter/: Cargo.toml
components/data-exporter/src/: aliasing.rs  data_exporter.rs  error.rs  json_exporter.rs  lib.rs  serializers.rs
components/data-exporter/tests/: test_export_to_json.rs
components/data-provider/: Cargo.toml
components/data-provider-json/: Cargo.toml
components/data-provider-json/src/: lib.rs  schema.rs
components/data-provider-json/tests/: test_file_io.rs  test_no_std.rs
components/data-provider/src/: cloneable_any.rs  data_entry.rs  data_key.rs  data_provider.rs  decimal.rs  error.rs  helpers.rs  invariant.rs  iter.rs  lib.rs  plurals.rs  validator.rs
components/data-provider/tests/: json_warehouse.rs
components/datap_json/: Cargo.toml  README.md
components/datap_json/src/: lib.rs  schema.rs
components/datap_json/tests/: test_file_io.rs  test_no_std.rs
components/datetime/: Cargo.toml  README.md  tz_list.md
components/datetime/benches/: datetime.rs  pattern.rs
components/datetime/data/: Cargo.toml  README.md  config.json
components/datetime/examples/: time_zone_list.rs  timezone_picker.rs  work_log.rs  work_log_cloning.rs
components/datetime/src/: any.rs  arithmetic.rs  builder.rs  calendar.rs  chrono.rs  combo.rs  date.rs  date_new.rs  datetime.rs  dynamic.rs  error.rs  external_loaders.rs  fields.rs  fieldset.rs  fieldsets.rs  format.rs  helpers.rs  input.rs  jiff.rs  lib.rs  metazone.rs  mock.rs  neo.rs  neo_marker.rs  neo_pattern.rs  neo_serde.rs  neo_skeleton.rs  neo_zone.rs  parts.rs  pattern.rs  provider.rs  scaffolding.rs  size_test_macro.rs  skeleton.rs  time_crate.rs  time_zone.rs  time_zone.rs.orig  timezone.rs  tz_registry.rs  (+2 more)
components/decimal/: Cargo.toml  README.md
components/e2etests/: Cargo.toml
components/ecma402/: Cargo.toml  README.md
components/experimental/: Cargo.toml  README.md
components/fs-data-provider/: Cargo.toml
components/fs_data_provider/: Cargo.toml
components/icu/: Cargo.toml  README.md  mis_collation.postcard  root_collation.postcard
components/icu4x/: Cargo.toml  README.md  build.rs
components/icu4x_ecma402/: Cargo.toml
components/list/: Cargo.toml  README.md
components/locale/: Cargo.toml  README.md
components/locale_canonicalizer/: Cargo.toml  README.md
components/locid/: Cargo.toml  README.md
components/locid_transform/: Cargo.toml  README.md
components/normalizer/: Cargo.toml  README.md  trie-value-format.md
components/num-util/: Cargo.toml
(+36124 files in other folders)
