# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[workspace]
resolver = "2"
members = [
    # KEEP IN SYNC WITH workspace.dependencies and tutorials/.cargo/config.toml

    # Components
    "components/calendar",
    "components/casemap",
    "components/collator",
    "components/collections",
    "components/collections/codepointtrie_builder",
    "components/datetime",
    "components/decimal",
    "components/experimental",
    "components/icu",
    "components/list",
    "components/locale",
    "components/locale_core",
    "components/normalizer",
    "components/plurals",
    "components/properties",
    "components/segmenter",
    "components/timezone",

    # FFI
    "ffi/capi",
    "ffi/ecma402",
    "ffi/freertos",
    "ffi/harfbuzz",

    # Provider
    "provider/adapters",
    "provider/baked",
    "provider/source",
    "provider/blob",
    "provider/core",
    "provider/core/macros",
    "provider/export",
    "provider/fs",
    "provider/registry",
    "provider/icu4x-datagen",

    # Baked data
    "provider/data/calendar",
    "provider/data/casemap",
    "provider/data/collator",
    "provider/data/datetime",
    "provider/data/decimal",
    "provider/data/list",
    "provider/data/locale",
    "provider/data/normalizer",
    "provider/data/plurals",
    "provider/data/properties",
    "provider/data/segmenter",
    "provider/data/timezone",

    # Utils
    "utils/bies",
    "utils/calendrical_calculations",
    "utils/crlify",
    "utils/databake",
    "utils/databake/derive",
    "utils/deduplicating_array",
    "utils/fixed_decimal",
    "utils/ixdtf",
    "utils/litemap",
    "utils/pattern",
    "utils/preferences",
    "utils/resb",
    "utils/env_preferences",
    "utils/tinystr",
    "utils/tzif",
    "utils/writeable",
    "utils/yoke",
    "utils/yoke/derive",
    "utils/zerofrom",
    "utils/zerofrom/derive",
    "utils/zerotrie",
    "utils/zerovec",
    "utils/zerovec/derive",

    # Tools
    "tools/benchmark/binsize",
    "tools/benchmark/macros",
    "tools/benchmark/memory",
    "tools/make/bakeddata",
    "tools/make/depcheck",
    "tools/make/diplomat-coverage",
    "tools/make/diplomat-gen",
    "tools/make/download-repo-sources",
    "tools/md-tests",
]
# Note: Workspaces in subdirectories, such as tutorials/crates, are
# implicitly excluded from the main workspace.
exclude = [
    # Tutorials are tested outside the workspace to simulate external users
    "tutorials",
    # Don't publish the graveyard
    "tools/graveyard"
]

[workspace.package]
version = "1.5.0"
rust-version = "1.70"
authors = ["The ICU4X Project Developers"]
edition = "2021"
repository = "https://github.com/unicode-org/icu4x"
homepage = "https://icu4x.unicode.org"
license = "Unicode-3.0"
categories = ["internationalization"]
include = [
    "data/**/*",
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[workspace.dependencies]
# KEEP IN SYNC WITH workspace.members and tutorials/.cargo/config.toml

# Components
icu = { version = "~1.5.0", path = "components/icu", default-features = false }
icu_calendar = { version = "~1.5.0", path = "components/calendar", default-features = false }
icu_casemap = { version = "~1.5.0", path = "components/casemap", default-features = false }
icu_collator = { version = "~1.5.0", path = "components/collator", default-features = false }
icu_collections = { version = "~1.5.0", path = "components/collections", default-features = false }
icu_codepointtrie_builder = { version = "0.3.8", path = "components/collections/codepointtrie_builder", default-features = false }
icu_datetime = { version = "~1.5.0", path = "components/datetime", default-features = false }
icu_decimal = { version = "~1.5.0", path = "components/decimal", default-features = false }
icu_experimental = { version = "~0.1.0", path = "components/experimental", default-features = false }
icu_list = { version = "~1.5.0", path = "components/list", default-features = false }
icu_locale_core = { version = "~1.5.0", path = "components/locale_core", default-features = false }
icu_locale = { version = "~1.5.0", path = "components/locale", default-features = false }
icu_normalizer = { version = "~1.5.0", path = "components/normalizer", default-features = false }
icu_plurals = { version = "~1.5.0", path = "components/plurals", default-features = false }
icu_properties = { version = "~1.5.0", path = "components/properties", default-features = false }
icu_segmenter = { version = "~1.5.0", path = "components/segmenter", default-features = false }
icu_timezone = { version = "~1.5.0", path = "components/timezone", default-features = false }

# FFI
icu_capi = { version = "~1.5.0", path = "ffi/capi", default-features = false }
icu4x_ecma402 = { version = "0.8.2", path = "ffi/ecma402", default-features = false }
icu_freertos = { version = "~1.5.0", path = "ffi/freertos", default-features = false }
icu_harfbuzz = { version = "~0.2.0", path = "ffi/harfbuzz", default-features = false }

# Provider
icu_provider_export = { version = "~1.5.0", path = "provider/export", default-features = false }
icu_provider_source = { version = "~1.5.0", path = "provider/source", default-features = false }
icu_provider = { version = "~1.5.0", path = "provider/core", default-features = false }
icu_provider_macros = { version = "~1.5.0", path = "provider/core/macros", default-features = false }
icu_provider_adapters = { version = "~1.5.0", path = "provider/adapters", default-features = false }
icu_provider_baked = { version = "~1.5.0", path = "provider/baked", default-features = false }
icu_provider_blob = { version = "~1.5.0", path = "provider/blob", default-features = false }
icu_provider_fs = { version = "~1.5.0", path = "provider/fs/", default-features = false }
icu_provider_registry = { version = "~1.5.0", path = "provider/registry/", default-features = false }

# Baked data
icu_calendar_data = { version = "~1.5.0", path = "provider/data/calendar", default-features = false }
icu_casemap_data = { version = "~1.5.0", path = "provider/data/casemap", default-features = false }
icu_collator_data = { version = "~1.5.0", path = "provider/data/collator", default-features = false }
icu_datetime_data = { version = "~1.5.0", path = "provider/data/datetime", default-features = false }
icu_decimal_data = { version = "~1.5.0", path = "provider/data/decimal", default-features = false }
icu_list_data = { version = "~1.5.0", path = "provider/data/list", default-features = false }
icu_locale_data = { version = "~1.5.0", path = "provider/data/locale", default-features = false }
icu_normalizer_data = { version = "~1.5.0", path = "provider/data/normalizer", default-features = false }
icu_plurals_data = { version = "~1.5.0", path = "provider/data/plurals", default-features = false }
icu_properties_data = { version = "~1.5.0", path = "provider/data/properties", default-features = false }
icu_segmenter_data = { version = "~1.5.0", path = "provider/data/segmenter", default-features = false }
icu_timezone_data = { version = "~1.5.0", path = "provider/data/timezone", default-features = false }
icu_experimental_data = { version = "~0.1.0", path = "provider/data/experimental", default-features = false }

# Utils
bies = { version = "0.2.2", path = "utils/bies", default-features = false }
calendrical_calculations = { version = "0.1.1", path = "utils/calendrical_calculations", default-features = false }
crlify = { version = "1.0.4", path = "utils/crlify", default-features = false }
databake = { version = "0.1.8", path = "utils/databake", default-features = false }
databake-derive = { version = "0.1.8", path = "utils/databake/derive", default-features = false }
deduplicating_array = { version = "0.1.6", path = "utils/deduplicating_array", default-features = false }
fixed_decimal = { version = "0.5.6", path = "utils/fixed_decimal", default-features = false }
icu_pattern = { version = "0.2.0", path = "utils/pattern", default-features = false }
ixdtf = { version = "0.2.0", path = "utils/ixdtf", default-features = false }
litemap = { version = "0.7.3", path = "utils/litemap", default-features = false }
tinystr = { version = "0.7.5", path = "utils/tinystr", default-features = false }
tzif = { version = "0.2.3", path = "utils/tzif", default-features = false }
writeable = { version = "0.5.5", path = "utils/writeable/", default-features = false }
yoke = { version = "0.7.4", path = "utils/yoke", default-features = false }
yoke-derive = { version = "0.7.4", path = "utils/yoke/derive", default-features = false }
zerofrom = { version = "0.1.3", path = "utils/zerofrom", default-features = false }
zerofrom-derive = { version = "0.1.3", path = "utils/zerofrom/derive", default-features = false }
zerotrie = { version = "0.1.3", path = "utils/zerotrie", default-features = false }
zerovec = { version = "0.10.2", path = "utils/zerovec", default-features = false }
zerovec-derive = { version = "0.10.2", path = "utils/zerovec/derive", default-features = false }

# Tools
icu_benchmark_macros = { path = "tools/benchmark/macros" }
# bench-binsize never used as a dep
# bench-memory never used as a dep
# make/* never used as a dep

# The version here can either be a `version = ".."` spec or `git = "https://github.com/rust-diplomat/diplomat", rev = ".."`
# Diplomat must be published preceding a new ICU4X release but may use git versions in between
diplomat = { git = "https://github.com/rust-diplomat/diplomat", rev = "8744ac97162341f347b63131969ad736e1047f6d" }
diplomat-runtime = { git = "https://github.com/rust-diplomat/diplomat", rev = "8744ac97162341f347b63131969ad736e1047f6d" }
diplomat_core = { git = "https://github.com/rust-diplomat/diplomat", rev = "8744ac97162341f347b63131969ad736e1047f6d" }
diplomat-tool = { git = "https://github.com/rust-diplomat/diplomat", rev = "8744ac97162341f347b63131969ad736e1047f6d" }

# EXTERNAL DEPENDENCIES
#
# Due to semver-related constraints, we generally want to consume crates.io dependencies with
# default features, with some notable exceptions:
#
# 1. Dependencies of core library crates need to be `no_std`
# 2. Some crates have a lot of default features that pull in undesirable transitive deps
#
# We therefore have three groups for our crates.io dependencies.

## External Deps Group 1: Library deps except datagen. No default features.
# Keep in sync with allowlist.rs:
# BASIC_RUNTIME_DEPS
# BASIC_BUILD_DEPS
# EXTRA_SERDE_DEPS
# EXTRA_EXPERIMENTAL_DEPS
# EXTRA_LSTM_DEPS
# EXTRA_RYU_DEPS
# EXTRA_CAPI_DEPS
# EXTRA_BLOB_DEPS
# EXTRA_FS_DEPS
core_maths = { version = "0.1.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
either = { version = "1.9.0", default-features = false }
libc_alloc = { version = "1.0.6", default-features = false }
log = { version = "0.4.17", default-features = false }
memchr = { version = "2.6.0", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
num-rational = { version = "0.4.0", default-features = false }
num-traits = { version = "0.2.0", default-features = false }
postcard = { version = "1.0.1", default-features = false }
regex-automata = { version = "0.4.7", default-features = false }
ryu = { version = "1.0.5", default-features = false }
serde = { version = "1.0.110", default-features = false }
serde-json-core = { version = "0.4.0", default-features = false }
smallvec = { version = "1.10.0", default-features = false }
stable_deref_trait = { version = "1.2.0", default-features = false }
twox-hash = { version = "1.4.2", default-features = false }
unicode-bidi = { version = "0.3.11", default-features = false }
utf16_iter = { version = "1.0.2", default-features = false }
utf8_iter = { version = "1.0.2", default-features = false }
write16 = { version = "1.0.0", default-features = false }

## External Deps Group 2: Heavy Dev and Datagen deps. No default features.
zip = { version = "0.6.0", default-features = false }
serde-aux = { version = "4.0.0", default-features = false }

## External Deps Group 3: Dev and Datagen deps. Include default features.
arraystring = "0.3.0"
arrayvec = "0.7.2"
atoi = "1.0.0"
bincode = "1.3.1"
clap = "4.2.0"
combine = "4.3.1"
criterion = "0.5.0"
detone = "1.0.0"
elsa = "1.10.0"
erased-serde = "0.3.11"
eyre = "0.6.0"
getrandom = "0.2"
heck = "0.5"
iai = "0.1.1"
indexmap = "1.0.0"
itertools = "0.10.3"
ndarray = "0.15.0"
nom = "7.0.0"
proc-macro2 = "1.0.61"
quote = "1.0.28"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
rayon = "1.3.0"
rkyv = "0.7"
rmp-serde = "1.2.0"
serde_json = "1.0.45"
simple_logger = "4.0.0"
syn = "2.0.21"
synstructure = "0.13.0"
toml = "0.5.8"
ureq = "2.3.0"
walkdir = "2.3.2"
wasmi = "0.31.2"
wat = "1"

# Size optimized builds
[profile.release-opt-size]
inherits = "release"
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1

# Builds with debug metadata but not debug assertions
# for testing GIGO code paths
[profile.dev-without-assertions]
inherits = "dev"
debug-assertions = false

[profile.bench]
lto = true

# Enable debug information specifically for memory profiling.
# https://docs.rs/dhat/0.2.1/dhat/#configuration
[profile.bench-memory]
inherits = "bench"
debug = true
